client/src/index.css
:root {
  --primary-color: #2d303f;
  --secondary-color: #424ead;
  --white-text: #ffffff;
}

* {
  margin: 0%;
  padding: 0%;
  box-sizing: border-box;
}
p{
  margin: 5px 0px;
}
body {
  /* background-color: teal; */
  padding: 0;
  margin: 0;
}
.login-btn-primary {
  background-color: var(--primary-color);
  color: var(--white-text);
}

.login-btn-secondary {
  background-color: var(--secondary-color);
  color: var(--white-text);
}

.modal-active {
  background-color: rgba(0, 0, 0, 0.5);
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100vw;
  height: 100vh;
  z-index: 8;
}

.form-control:focus {
  border-color: --primary-color;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 5px var(--primary-color);
}

.login {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 10;
  width: 400px;
  height: 340px;
}
.register {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 10;
  width: 400px;
  height: 450px;
}

.login-btn {
  position: absolute !important;
  display: inline !important;
  right: 6px;
  top: 10px;
  z-index: 10;
  border-radius: 0px 4px 4px 0px;
  width: 100px;
  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
}
.login-btn:hover {
  background: #575d7a;
  color: white;
}
.register-btn {
  position: absolute !important;
  display: inline !important;
  right: 106px;
  width: 100px;
  top: 10px;
  z-index: 10;
  border-radius: 4px 0px 0px 4px;
  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
}
.register-btn:hover {
  background: #5c66b5;
  color: white;
}

.btn:focus,
.btn:active {
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
}

.register-heading {
  background-color: var(--primary-color);
  color: white;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 20px;
}

.form-outline {
  text-align: start !important;
}

.register-form-btn {
  background-color: var(--secondary-color);
  color: white;
  border-radius: 0px !important;
}
.gm-style .gm-style-iw-c {
  background: rgba(255, 255, 255, 0.8);
  box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.25);
  backdrop-filter: blur(8px);
  border-radius: 4px;
}
/* .gm-style .gm-style-iw-t::after{
  display:none;
} */

.location-detail {
  width: 304px;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  padding: 8px;
}
.date-pickerAdjust {
  transform: translate(0, 150px);
}

.label-box {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 8px;
  width: 100%;
  background: #282b34;
  color: white;
  margin-top: 12px;
}

.title {
  width: 50%;
  text-align: center;
}

.title-main {
  font-size: 22px;
}

.visit-btn-box {
  margin-top: 12px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-sizing: border-box;
  width: 100%;
}

.visit-btn-today,
.visit-btn-past {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 12px;
  color: #424ead;
  width: 49.5%;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border: #424ead 2px solid;
  border-radius: 0px 4px 4px 0px;
  font-weight: 600;
  font-size: 16px;
}

.visit-btn-today {
  border-radius: 4px 0px 0px 4px !important;
}
.btn-today-disabled {
  background-color: #282b3483;
  color: white;
  border: none;
}
.btn-today-disabled:hover {
  background-color: #282b3483 !important;
  color: white !important;
  border: none !important;
}

.visit-btn-past {
  border-radius: 0px 4px 4px 0px !important;
}

.visit-btn-today:hover,
.visit-btn-past:hover {
  background: #424ead;
  color: white;
  border: #424ead 2px solid;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.visit-btn-today:active,
.visit-btn-past:active {
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
  border: none;
}
.btn-add-past-visit {
  color: #424ead;
  width: 100%;
  height: 40px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border: #424ead 2px solid;
  border-radius: 4px;
  font-weight: 600;
  font-size: 16px;
  margin-bottom: 10px;
}
.btn-add-past-visit:hover {
  background: #424ead;
  color: white;
  border: #424ead 2px solid;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

button {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
}

.recent-visits {
  width: 100%;
  margin-top: 15px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 4px;
}
.recent-visits-title {
  width: 100%;
  height: 30px;
}
.recent-visits-title h5 {
  line-height: 30px;
}

.recent-visits-list {
  width: 100%;
  display: flex;
  flex-direction: column;
  padding: 0;
  list-style-type: none;
}

.recent-visits-entry {
  display: flex;
  align-content: center;
  justify-content: space-around;
  height: 25px;
}

.recent-visits-entry h6 {
  line-height: 25px;
}
.close-icon {
  width: 100%;
  display: flex;
  align-content: center;
  justify-content: space-around;
  cursor: pointer;
}
.close-icon div {
  border: 3px var(--secondary-color) solid;
  border-radius: 20px;
  width: 38px;
  height: 48px;
  text-align: center;
  font-size: 25px;
  line-height: 25px;
  margin-top: 0;
  cursor: pointer;
}

.close-icon p {
  margin: 0px;
  padding: 0;
  font-size: 10px;
  line-height: 10px;
}

.highscore-icon {
  position: absolute;
  color: white;
  height: 50px;
  width: 50px;
  text-align: center;
  line-height: 50px;
  font-size: 40px;
  transform: translate(0%, -50%);
  border-radius: 0px 5px 5px 0px;
  top: 50%;
  z-index: 10;
  background-color: var(--secondary-color);
}
.highscore-card {
  position: absolute;
  min-height: 50px;
  width: 250px;
  transform: translate(0%, -50%);
  top: 50%;
  z-index: 10;
  background-color: rgba(255, 255, 255, 0.7);
  backdrop-filter: blur(8px);
  box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25);
  display: flex;
  justify-content: start;
  padding: 15px;
}
/* ... */

